[package]
name = "lox_interpreter"
version = "0.1.0"
authors = ["Kristof Kovacs <kovacs.kristof33@proton.me>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "1.0.38"
log = "0.4.22"
convert_case = "0.6.0"
strum = "0.26"
strum_macros = "0.26"
once_cell = "1.20.2"
regex = "1.11.0"

[dev-dependencies]
pretty_assertions = "1.4.1"